[package]
name = "smtp-to-telegram"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
smtp-proto = "0.2"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.0", features = ["derive", "env"] }
anyhow = "1.0"
mail-parser = "0.9"
ammonia = "3.3"
once_cell = "1.19"
base64 = "0.22.1"

